fix myanmar font is not showing up in ipad's browser

--- a/public/assets/css/main.less
+++ b/public/assets/css/main.less
@@ -3,6 +3,10 @@
   src: local('Myanmar3'), url('/assets/fonts/myanmar3.ttf');
 }
 
+.mm {
+  font-family: "Myanmar3", sans-serif;
+}
+
 h1 {
   font-family: "Myanmar3", sans-serif;
   line-height: 2em;
